Fixed overlapping images in MyTravelIdeas

--- a/src/scss/ui/my-travels-ideas.scss
+++ b/src/scss/ui/my-travels-ideas.scss
@@ -13,6 +13,8 @@
 .MyTravelIdeas div.accordin-section section {
   > div {
     height: 300px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   height: auto !important;
 }
